--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
   http: ^1.1.0
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
