--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   flutter_svg: ^2.0.9
   http: ^1.1.0
   provider: ^6.1.1
+  flutter_map: ^7.0.2
+  geolocator: ^12.0.0
+  latlong2: ^0.9.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
