--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   geolocator: ^12.0.0
   latlong2: ^0.9.1
   permission_handler: ^11.3.1
+  shared_preferences: ^2.2.3
+  flex_color_scheme: ^8.3.1
 
 dev_dependencies:
   flutter_test:
